# ROB-IS

./: .Dockerfile  LICENSE  README.md
hidden_costs_generator/: CMakeLists.txt  README.md  package.xml
hidden_costs_generator/experiment_batch_files/: segment0120_approach0_v01  segment0120_approach0_v02  segment0120_approach0_v03  segment0120_approach0_v04  segment0120_approach0_v05  segment0120_approach0_v06  segment0120_approach0_v07  segment0120_approach0_v08  segment0120_approach0_v09  segment0120_approach1_v01  segment0120_approach1_v02  segment0120_approach1_v03  segment0120_approach1_v04  segment0120_approach1_v05  segment0120_approach1_v06  segment0120_approach1_v07  segment0120_approach1_v08  segment0120_approach1_v09  segment0120_approach2_v01  segment0120_approach2_v02  segment0120_approach2_v03  segment0120_approach2_v04  segment0120_approach2_v05  segment0120_approach2_v06  segment0120_approach2_v07  segment0120_approach2_v08  segment0120_approach2_v09  segment3450_approach0_v01  segment3450_approach0_v02  segment3450_approach0_v03  segment3450_approach0_v04  segment3450_approach0_v05  segment3450_approach0_v06  segment3450_approach0_v07  segment3450_approach0_v08  segment3450_approach0_v09  segment3450_approach1_v01  segment3450_approach1_v02  segment3450_approach1_v03  segment3450_approach1_v04  (+41 more)
hidden_costs_generator/maps/: hppits_doors.yaml  lt13.yaml  objects-empty.yaml  objects-sarah.yaml  objects-sarah2.yaml  objects-sarah3.yaml  objects-sarah5.yaml  objects.yaml  prefs_doors.yaml  prefs_doors_hard.yaml  prefs_doors_soft.yaml  prefs_doors_test.yaml
hidden_costs_generator/object_config/: simple_house_01doughnuts_variant00.yaml  simple_house_01doughnuts_variant01.yaml  simple_house_01doughnuts_variant02.yaml  simple_house_01doughnuts_variant03.yaml  simple_house_01doughnuts_variant04.yaml  simple_house_01doughnuts_variant05.yaml  simple_house_01doughnuts_variant06.yaml  simple_house_01doughnuts_variant07.yaml  simple_house_01doughnuts_variant08.yaml  simple_house_01doughnuts_variant09.yaml  simple_house_02doughnuts_variant00.yaml  simple_house_02doughnuts_variant01.yaml  simple_house_02doughnuts_variant02.yaml  simple_house_02doughnuts_variant03.yaml  simple_house_02doughnuts_variant04.yaml  simple_house_02doughnuts_variant05.yaml  simple_house_02doughnuts_variant06.yaml  simple_house_02doughnuts_variant07.yaml  simple_house_02doughnuts_variant08.yaml  simple_house_02doughnuts_variant09.yaml  simple_house_03doughnuts_variant00.yaml  simple_house_03doughnuts_variant01.yaml  simple_house_03doughnuts_variant02.yaml  simple_house_03doughnuts_variant03.yaml  simple_house_03doughnuts_variant04.yaml  simple_house_03doughnuts_variant05.yaml  simple_house_03doughnuts_variant06.yaml  simple_house_03doughnuts_variant07.yaml  simple_house_03doughnuts_variant08.yaml  simple_house_03doughnuts_variant09.yaml  simple_house_04doughnuts_variant00.yaml  simple_house_04doughnuts_variant01.yaml  simple_house_04doughnuts_variant02.yaml  simple_house_04doughnuts_variant03.yaml  simple_house_04doughnuts_variant04.yaml  simple_house_04doughnuts_variant05.yaml  simple_house_04doughnuts_variant06.yaml  simple_house_04doughnuts_variant07.yaml  simple_house_04doughnuts_variant08.yaml  simple_house_04doughnuts_variant09.yaml  (+950 more)
hidden_costs_generator/object_files_lt13/: lt13_01doughnuts_variant00.yaml  lt13_01doughnuts_variant01.yaml  lt13_01doughnuts_variant02.yaml  lt13_01doughnuts_variant03.yaml  lt13_01doughnuts_variant04.yaml  lt13_01doughnuts_variant05.yaml  lt13_01doughnuts_variant06.yaml  lt13_01doughnuts_variant07.yaml  lt13_01doughnuts_variant08.yaml  lt13_01doughnuts_variant09.yaml  lt13_01doughnuts_variant10.yaml  lt13_02doughnuts_variant00.yaml  (+1077 more)
rob_is/: CMakeLists.txt  package.xml
rosplan_waypoint_sampling/: CMakeLists.txt  package.xml
rosplan_waypoint_sampling/config/: waypoint_sampling.rviz
rosplan_waypoint_sampling/include/robis_interface_mapping/: RPFixedWaypointGenerator.h  RPRoadmapFilter.h  RPRoadmapServerPref.h
rosplan_waypoint_sampling/include/rosplan_interface_mapping/: RPFixedWaypointGenerator.h  RPRoadmapFilter.h
rosplan_waypoint_sampling/launch/: aaai_demo.launch  lt13_sampling_experiment.launch  lt13_sampling_experiment_robis.launch  rosplan_roadmap_server_pref.launch
rosplan_waypoint_sampling/src/: HiddenCostPublisher.py  RPFixedWaypointGenerator.cpp  RPRoadmapFilter.cpp  RPRoadmapServerPref (copy).cpp  RPRoadmapServerPref.cpp  main_executor.py
rosplan_waypoint_sampling/src-before-sarah-messing-up-things/: HiddenCostPublisher.py  RPFixedWaypointGenerator.cpp  RPRoadmapFilter.cpp
(+198 files in other folders)
