<?xml version="1.0"?>
<package>
  <name>rosplan_waypoint_sampling</name>
  <version>0.0.2</version>
  <description>
    Samples waypoints from a dense PRM, given an underlying probability distribution of how useful they are to task planning.
  </description>

  <maintainer email="michael.cashmore@strath.ac.uk">Michael Cashmore</maintainer>
  <maintainer email="gerard.canal@kcl.ac.uk">Gerard Canal</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rosplan_knowledge_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>occupancy_grid_utils</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>rosplan_interface_mapping</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>eigen_stl_containers</build_depend>
  <build_depend>rviz_visual_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rosplan_knowledge_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>occupancy_grid_utils</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>rosplan_interface_mapping</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>eigen_stl_containers</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
  

</package>
